[package]
name = "hachi"
version = "0.1.0"
edition = "2021"
description = "Ronin Cyberpunk control center for ASUS laptops"
authors = ["xero"]
license = "MIT"

[dependencies]
# TUI Framework
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# VFX Engine
tachyonfx = "0.9"

# Async Runtime
tokio = { version = "1", features = ["full", "sync", "macros", "rt-multi-thread"] }
futures = "0.3"

# D-Bus Communication (Pure Rust)
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Utilities
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
